# RTv1

./: CMakeLists.txt  Info  Makefile  README.md  author  install_SDL2.sh  install_SDL2_Linux.sh  install_SDL2_MacOS.sh
getnextline/: get_next_line.h
getnextline/libft/: ft_countwords.c  ft_lstadd.c  ft_lstmap.c  ft_memalloc.c  ft_memdel.c  ft_strclr.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_strmap.c  ft_strmapi.c  ft_strnew.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_wordlen.c
getnextline/libft/includes/: libft.h
includes/: RTv1.h  parser_rtv1.h  rtv1.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_countwords.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isgraph.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnewend.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+27 more)
scenes/: all_in.rtv1  cone.rtv1  cylinder.rtv1  demo  demo.rtv1  demo1.rtv1  plane.rtv1  scene1.rtv1  scene2.rtv1  scene3.rtv1  sphere.rtv1  test.rtv1
src/: alg.c  check_color.c  color_scale.c  color_sum.c  cone.c  correct_queue.c  cylinder.c  ft_atof.c  ft_htoi.c  help.c  init_color.c  init_vec.c  light.c  loop.c  main-copy.c  main.c  main1.c  parser_check_objects.c  parser_check_scene.c  parser_file.c  parser_main.c  parser_objects.c  parser_scene.c  parser_utils.c  plane.c  reflection.c  rotate.c  sphere.c  vec_dot.c  vec_norm.c  vec_scale.c  vec_sub.c  vec_sum.c
src/getnextline/: get_next_line.c  get_next_line.h
src/getnextline/libft/: ft_atoi.c  ft_itoa.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_revstr.c  ft_strcat.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strncat.c  ft_strnequ.c  ft_strrchr.c  ft_strsub.c  ft_strtrim.c
src/parser/: parser_check_objects.c  parser_check_scene.c  parser_check_value.c  parser_file.c  parser_main.c  parser_objects.c  parser_scene.c  parser_utils1.c  parser_utils2.c
